--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "axios": "0.16.2",
     "browser-locale": "1.0.2",
     "express": "4.15.3",
+    "firebase": "^4.8.2",
     "font-awesome": "^4.7.0",
     "js-cookie": "2.1.4",
     "lodash": "4.17.4",
